samples/_failures_safe/1761393983_f8b369_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_21c562fb.c: In function ‘main’:
./samples/SAFE/__tmp_21c562fb.c:164:34: error: expected ‘)’ at end of input
  164 |     if (len > 0 && input[len - 1]
      |        ~                         ^
      |                                  )
./samples/SAFE/__tmp_21c562fb.c:164:5: error: expected declaration or statement at end of input
  164 |     if (len > 0 && input[len - 1]
      |     ^~
